Update location info: Replace parking section with bakery-specific details
- Changed 'Parking & Access' to 'Fresh Daily'
- Added bakery-relevant information: fresh daily baking, custom orders, same-day pickup
- More relevant for bakery customers than parking details

--- a/index.html
+++ b/index.html
@@ -327,10 +327,10 @@
                         </div>
                     </div>
                     <div class="info-card">
-                        <h3><i class="fas fa-car"></i> Parking & Access</h3>
-                        <p>Free parking available<br>
-                            Wheelchair accessible<br>
-                            Public transport nearby</p>
+                        <h3><i class="fas fa-birthday-cake"></i> Fresh Daily</h3>
+                        <p>All items baked fresh daily<br>
+                            Custom orders welcome<br>
+                            Same-day pickup available</p>
                     </div>
                 </div>
                 <div class="map-container">
