--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="gallery.html" class="nav-link">Gallery</a></li>
                 <li><a href="menu.html" class="nav-link">Menu & Prices</a></li>
+                <li><a href="showcase.html" class="nav-link">Bakery Showcase</a></li>
                 <li><a href="services.html" class="nav-link">Services</a></li>
                 <li><a href="#location" class="nav-link">Location</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
@@ -46,8 +47,9 @@
             <p class="hero-description">Crafting premium cakes, pastries, and confections with love and the finest
                 ingredients</p>
             <div class="hero-buttons">
-                <a href="gallery.html" class="btn btn-primary">View Our Creations</a>
-                <a href="#contact" class="btn btn-secondary">Order Now</a>
+                <a href="showcase.html" class="btn btn-primary">Bakery Showcase</a>
+                <a href="menu.html" class="btn btn-secondary">View Menu & Prices</a>
+                <a href="#contact" class="btn btn-tertiary">Order Now</a>
             </div>
         </div>
         <div class="hero-video">
@@ -299,7 +301,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>Find Us</h2>
-                <p>Visit our bakery or let us come to you</p>
+                <p>Place your order and let it come to you</p>
             </div>
             <div class="location-content">
                 <div class="location-info">
