--- a/menu.html
+++ b/menu.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+    <!-- Scroll Progress Bar -->
+    <div class="scroll-progress">
+        <div class="progress-bar" id="progressBar"></div>
+    </div>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
@@ -34,10 +38,10 @@
     </nav>
 
     <!-- Menu Hero -->
-    <section class="page-hero">
+    <section class="page-hero" style="padding: 120px 0 80px; background: linear-gradient(135deg, var(--cream) 0%, var(--soft-pink) 100%); text-align: center;">
         <div class="container">
-            <h1>Menu & Pricing</h1>
-            <p>Delicious options for every taste and budget</p>
+            <h1 style="font-family: var(--font-script); font-size: 3.5rem; color: var(--primary-color); margin-bottom: 1rem;">Menu & Pricing</h1>
+            <p style="font-size: 1.2rem; color: var(--medium-gray); max-width: 600px; margin: 0 auto;">Delicious options for every taste and budget</p>
         </div>
     </section>
 
