Updated gallery image descriptions to match content accurately
- Standardized image names and descriptions in gallery.html
- Made descriptions more generic but accurate for typical bakery items
- Ensured consistency between alt text, titles, and descriptions
- Updated lightbox descriptions to match overlay content
- Improved accessibility with better image descriptions
- Maintained professional bakery terminology throughout

--- a/gallery.html
+++ b/gallery.html
@@ -82,15 +82,15 @@
                 <!-- Row 1 -->
                 <div class="gallery-card large" data-category="cakes">
                     <div class="card-image">
-                        <img src="assets/images/sample1.png" alt="Multi-Tier Wedding Cake" loading="lazy">
+                        <img src="assets/images/sample1.png" alt="Elegant Wedding Cake" loading="lazy">
                         <div class="image-overlay">
                             <div class="overlay-content">
                                 <span class="category-tag">Wedding Cakes</span>
-                                <h3>Multi-Tier Wedding Cake</h3>
-                                <p>Elegant white wedding cake with floral decorations and multiple tiers</p>
+                                <h3>Elegant Wedding Cake</h3>
+                                <p>Beautiful multi-tier wedding cake with elegant decorative elements</p>
                                 <div class="card-actions">
                                     <button class="action-btn"
-                                        onclick="openLightbox('assets/images/sample1.png', 'Elegant Wedding Cake', 'Three-tier masterpiece with buttercream roses and gold accents')">
+                                        onclick="openLightbox('assets/images/sample1.png', 'Elegant Wedding Cake', 'Beautiful multi-tier wedding cake with elegant decorative elements')">
                                         <i class="fas fa-expand"></i>
                                     </button>
                                     <a href="https://wa.me/254704939844?text=I'm interested in the Elegant Wedding Cake"
@@ -105,12 +105,12 @@
 
                 <div class="gallery-card medium" data-category="pastries">
                     <div class="card-image">
-                        <img src="assets/images/sample3.png" alt="Golden Butter Croissants" loading="lazy">
+                        <img src="assets/images/sample3.png" alt="Fresh Croissants" loading="lazy">
                         <div class="image-overlay">
                             <div class="overlay-content">
                                 <span class="category-tag">Pastries</span>
-                                <h3>Golden Butter Croissants</h3>
-                                <p>Perfectly golden, buttery croissants with flaky layers</p>
+                                <h3>Fresh Croissants</h3>
+                                <p>Buttery, flaky pastries baked fresh daily</p>
                                 <div class="card-actions">
                                     <button class="action-btn"
                                         onclick="openLightbox('assets/images/sample3.png', 'Fresh Croissants', 'Buttery, flaky pastries baked fresh daily')">
@@ -128,12 +128,12 @@
 
                 <div class="gallery-card small" data-category="cupcakes">
                     <div class="card-image">
-                        <img src="assets/images/sample4.png" alt="Decorated Cupcake Collection" loading="lazy">
+                        <img src="assets/images/sample4.png" alt="Gourmet Cupcakes" loading="lazy">
                         <div class="image-overlay">
                             <div class="overlay-content">
                                 <span class="category-tag">Cupcakes</span>
-                                <h3>Decorated Cupcake Collection</h3>
-                                <p>Beautifully decorated cupcakes with colorful frosting designs</p>
+                                <h3>Gourmet Cupcakes</h3>
+                                <p>Premium cupcakes with artistic decorations</p>
                                 <div class="card-actions">
                                     <button class="action-btn"
                                         onclick="openLightbox('assets/images/sample4.png', 'Gourmet Cupcakes', 'Premium cupcakes with artistic decorations')">
@@ -152,15 +152,15 @@
                 <!-- Row 2 -->
                 <div class="gallery-card medium" data-category="cakes">
                     <div class="card-image">
-                        <img src="assets/images/sample2.png" alt="Colorful Birthday Cake" loading="lazy">
+                        <img src="assets/images/sample2.png" alt="Birthday Celebration Cake" loading="lazy">
                         <div class="image-overlay">
                             <div class="overlay-content">
                                 <span class="category-tag">Birthday Cakes</span>
-                                <h3>Colorful Birthday Cake</h3>
-                                <p>Vibrant birthday cake with rainbow decorations and candles</p>
+                                <h3>Birthday Celebration Cake</h3>
+                                <p>Custom birthday cakes with personalized themes</p>
                                 <div class="card-actions">
                                     <button class="action-btn"
-                                        onclick="openLightbox('assets/images/sample2.png', 'Birthday Celebration', 'Custom birthday cakes with personalized themes')">
+                                        onclick="openLightbox('assets/images/sample2.png', 'Birthday Celebration Cake', 'Custom birthday cakes with personalized themes')">
                                         <i class="fas fa-expand"></i>
                                     </button>
                                     <a href="https://wa.me/254704939844?text=I'm interested in Birthday Celebration Cake"
@@ -175,15 +175,15 @@
 
                 <div class="gallery-card large" data-category="special">
                     <div class="card-image">
-                        <img src="assets/images/sample7.png" alt="Professional Celebration Cake" loading="lazy">
+                        <img src="assets/images/sample7.png" alt="Corporate Event Cake" loading="lazy">
                         <div class="image-overlay">
                             <div class="overlay-content">
                                 <span class="category-tag">Corporate</span>
-                                <h3>Professional Celebration Cake</h3>
-                                <p>Elegant corporate cake with sophisticated design elements</p>
+                                <h3>Corporate Event Cake</h3>
+                                <p>Professional cakes for business celebrations and milestones</p>
                                 <div class="card-actions">
                                     <button class="action-btn"
-                                        onclick="openLightbox('assets/images/sample7.png', 'Corporate Events', 'Professional cakes for business celebrations and milestones')">
+                                        onclick="openLightbox('assets/images/sample7.png', 'Corporate Event Cake', 'Professional cakes for business celebrations and milestones')"></button>
                                         <i class="fas fa-expand"></i>
                                     </button>
                                     <a href="https://wa.me/254704939844?text=I'm interested in Corporate Event Cakes"
@@ -222,18 +222,18 @@
                 <!-- Continue with more items -->
                 <div class="gallery-card medium" data-category="cakes">
                     <div class="card-image">
-                        <img src="assets/images/sample5.png" alt="Anniversary Special" loading="lazy">
+                        <img src="assets/images/sample5.png" alt="Anniversary Cake" loading="lazy">
                         <div class="image-overlay">
                             <div class="overlay-content">
                                 <span class="category-tag">Anniversary</span>
-                                <h3>Anniversary Special</h3>
-                                <p>Red velvet cake with cream cheese frosting</p>
+                                <h3>Anniversary Cake</h3>
+                                <p>Elegant anniversary cake with romantic decorations</p>
                                 <div class="card-actions">
                                     <button class="action-btn"
-                                        onclick="openLightbox('assets/images/sample5.png', 'Anniversary Special', 'Red velvet cake with cream cheese frosting')">
+                                        onclick="openLightbox('assets/images/sample5.png', 'Anniversary Cake', 'Elegant anniversary cake with romantic decorations')"></button>
                                         <i class="fas fa-expand"></i>
                                     </button>
-                                    <a href="https://wa.me/254704939844?text=I'm interested in Anniversary Special Cake"
+                                    <a href="https://wa.me/254704939844?text=I'm interested in Anniversary Cake"
                                         class="action-btn">
                                         <i class="fab fa-whatsapp"></i>
                                     </a>
@@ -245,18 +245,18 @@
 
                 <div class="gallery-card small" data-category="cupcakes">
                     <div class="card-image">
-                        <img src="assets/images/sample8.png" alt="Holiday Cupcakes" loading="lazy">
+                        <img src="assets/images/sample8.png" alt="Specialty Cupcakes" loading="lazy">
                         <div class="image-overlay">
                             <div class="overlay-content">
-                                <span class="category-tag">Holiday</span>
-                                <h3>Holiday Cupcakes</h3>
-                                <p>Seasonal themed mini celebrations</p>
+                                <span class="category-tag">Specialty</span>
+                                <h3>Specialty Cupcakes</h3>
+                                <p>Unique themed cupcakes for special occasions</p>
                                 <div class="card-actions">
                                     <button class="action-btn"
-                                        onclick="openLightbox('assets/images/sample8.png', 'Holiday Cupcakes', 'Seasonal themed mini celebrations')">
+                                        onclick="openLightbox('assets/images/sample8.png', 'Specialty Cupcakes', 'Unique themed cupcakes for special occasions')"></button>
                                         <i class="fas fa-expand"></i>
                                     </button>
-                                    <a href="https://wa.me/254704939844?text=I'm interested in Holiday Cupcakes"
+                                    <a href="https://wa.me/254704939844?text=I'm interested in Specialty Cupcakes"
                                         class="action-btn">
                                         <i class="fab fa-whatsapp"></i>
                                     </a>
@@ -268,18 +268,18 @@
 
                 <div class="gallery-card large" data-category="cakes">
                     <div class="card-image">
-                        <img src="assets/images/sample12.png" alt="Chocolate Masterpiece" loading="lazy">
+                        <img src="assets/images/sample12.png" alt="Chocolate Cake" loading="lazy">
                         <div class="image-overlay">
                             <div class="overlay-content">
                                 <span class="category-tag">Chocolate</span>
-                                <h3>Chocolate Masterpiece</h3>
-                                <p>Decadent chocolate layers with premium ganache</p>
+                                <h3>Chocolate Cake</h3>
+                                <p>Rich chocolate cake with decadent frosting</p>
                                 <div class="card-actions">
                                     <button class="action-btn"
-                                        onclick="openLightbox('assets/images/sample12.png', 'Chocolate Masterpiece', 'Decadent chocolate layers with premium ganache')">
+                                        onclick="openLightbox('assets/images/sample12.png', 'Chocolate Cake', 'Rich chocolate cake with decadent frosting')">
                                         <i class="fas fa-expand"></i>
                                     </button>
-                                    <a href="https://wa.me/254704939844?text=I'm interested in Chocolate Masterpiece"
+                                    <a href="https://wa.me/254704939844?text=I'm interested in Chocolate Cake"
                                         class="action-btn">
                                         <i class="fab fa-whatsapp"></i>
                                     </a>
@@ -292,18 +292,18 @@
                 <!-- Add more items with different sizes -->
                 <div class="gallery-card medium" data-category="pastries">
                     <div class="card-image">
-                        <img src="assets/images/sample10.png" alt="Classic Eclairs" loading="lazy">
+                        <img src="assets/images/sample10.png" alt="Savory Pastries" loading="lazy">
                         <div class="image-overlay">
                             <div class="overlay-content">
-                                <span class="category-tag">French</span>
-                                <h3>Classic Eclairs</h3>
-                                <p>Traditional choux pastry with premium cream</p>
+                                <span class="category-tag">Savory</span>
+                                <h3>Savory Pastries</h3>
+                                <p>Delicious savory pastries with various fillings</p>
                                 <div class="card-actions">
                                     <button class="action-btn"
-                                        onclick="openLightbox('assets/images/sample10.png', 'Classic Eclairs', 'Traditional choux pastry with premium cream')">
+                                        onclick="openLightbox('assets/images/sample10.png', 'Savory Pastries', 'Delicious savory pastries with various fillings')">
                                         <i class="fas fa-expand"></i>
                                     </button>
-                                    <a href="https://wa.me/254704939844?text=I'm interested in Classic Eclairs"
+                                    <a href="https://wa.me/254704939844?text=I'm interested in Savory Pastries"
                                         class="action-btn">
                                         <i class="fab fa-whatsapp"></i>
                                     </a>
@@ -315,15 +315,15 @@
 
                 <div class="gallery-card small" data-category="special">
                     <div class="card-image">
-                        <img src="assets/images/sample11.png" alt="Baby Shower" loading="lazy">
+                        <img src="assets/images/sample11.png" alt="Baby Shower Cake" loading="lazy">
                         <div class="image-overlay">
                             <div class="overlay-content">
                                 <span class="category-tag">Baby Shower</span>
-                                <h3>Baby Shower</h3>
+                                <h3>Baby Shower Cake</h3>
                                 <p>Adorable themed celebration cakes</p>
                                 <div class="card-actions">
                                     <button class="action-btn"
-                                        onclick="openLightbox('assets/images/sample11.png', 'Baby Shower', 'Adorable themed celebration cakes')">
+                                        onclick="openLightbox('assets/images/sample11.png', 'Baby Shower Cake', 'Adorable themed celebration cakes')"></button>
                                         <i class="fas fa-expand"></i>
                                     </button>
                                     <a href="https://wa.me/254704939844?text=I'm interested in Baby Shower Cake"
@@ -339,15 +339,15 @@
                 <!-- Continue with remaining images -->
                 <div class="gallery-card medium" data-category="cakes">
                     <div class="card-image">
-                        <img src="assets/images/sample9.png" alt="Graduation Celebration" loading="lazy">
+                        <img src="assets/images/sample9.png" alt="Graduation Cake" loading="lazy">
                         <div class="image-overlay">
                             <div class="overlay-content">
                                 <span class="category-tag">Graduation</span>
-                                <h3>Graduation Celebration</h3>
+                                <h3>Graduation Cake</h3>
                                 <p>Achievement cakes with academic themes</p>
                                 <div class="card-actions">
                                     <button class="action-btn"
-                                        onclick="openLightbox('assets/images/sample9.png', 'Graduation Celebration', 'Achievement cakes with academic themes')">
+                                        onclick="openLightbox('assets/images/sample9.png', 'Graduation Cake', 'Achievement cakes with academic themes')">
                                         <i class="fas fa-expand"></i>
                                     </button>
                                     <a href="https://wa.me/254704939844?text=I'm interested in Graduation Cake"
