--- a/gallery.html
+++ b/gallery.html
@@ -32,6 +32,7 @@
                 <li><a href="menu.html" class="nav-link">Menu & Prices</a></li>
                 <li><a href="showcase.html" class="nav-link">Bakery Showcase</a></li>
                 <li><a href="services.html" class="nav-link">Services</a></li>
+                <li><a href="index.html#location" class="nav-link">Location</a></li>
                 <li><a href="index.html#contact" class="nav-link">Contact</a></li>
             </ul>
             <div class="hamburger">
