--- a/gallery.html
+++ b/gallery.html
@@ -468,7 +468,7 @@
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
-                        <span>123 Sweet Street, Bakery District</span>
+                        <span>Kenyatta Road, Juja</span>
                     </div>
                 </div>
             </div>
