--- a/index.html
+++ b/index.html
@@ -307,9 +307,9 @@
                 <div class="location-info">
                     <div class="info-card">
                         <h3><i class="fas fa-map-marker-alt"></i> Our Location</h3>
-                        <p>123 Sweet Street<br>
-                            Bakery District<br>
-                            City, State 12345</p>
+                        <p>Kenyatta Road<br>
+                            Juja, Kiambu County<br>
+                            Kenya</p>
                     </div>
                     <div class="info-card">
                         <h3><i class="fas fa-clock"></i> Opening Hours</h3>
@@ -369,11 +369,11 @@
                     </div>
                     <div class="contact-card">
                         <div class="contact-icon">
-                            <i class="fas fa-envelope"></i>
+                            <i class="fab fa-whatsapp"></i>
                         </div>
-                        <h3>Email Support</h3>
-                        <p><a href="mailto:info@sweetnpuffy.com">info@sweetnpuffy.com</a></p>
-                        <small>General inquiries and support</small>
+                        <h3>WhatsApp Orders</h3>
+                        <p><a href="https://wa.me/254704939844">+254 704 939 844</a></p>
+                        <small>Quick orders and inquiries</small>
                     </div>
                 </div>
                 <div class="contact-form">
@@ -468,7 +468,7 @@
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
-                        <span>123 Sweet Street, Bakery District</span>
+                        <span>Kenyatta Road, Juja</span>
                     </div>
                 </div>
             </div>
