--- a/services.html
+++ b/services.html
@@ -181,8 +181,12 @@
                         <span>0704 939 844</span>
                     </div>
                     <div class="contact-item">
-                        <i class="fas fa-envelope"></i>
-                        <span>orders@sweetnpuffy.com</span>
+                        <i class="fab fa-whatsapp"></i>
+                        <span>WhatsApp Orders</span>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <span>Kenyatta Road, Juja</span>
                     </div>
                 </div>
             </div>
